# tako-assets

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
tako_ci/: __init__.py  __main__.py  manifest.json  run.mjs  tako_ci.py
tako_ci/assets/: mlip_core.687103967e7ef550.wasm  nequix-mp-1-pft.a88aeaed71fd4475.nqx  skala-1.1.0c8432ac3f03c8f1.fun
