[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomli-tako-ci"
version = "0.2.3"
description = "Tako Code Interpreter runtime with a minimal, git-distributable slice of the calculation WASM cores and model checkpoints."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Tako" }]
keywords = ["tako", "chemistry", "wasm", "code-interpreter", "mlip", "dft"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/itsuwari/tako-assets"
Source = "https://github.com/itsuwari/tako-assets"

[project.scripts]
tako-ci = "tako_ci.tako_ci:main"

[tool.setuptools]
packages = ["tako_ci"]
include-package-data = true

[tool.setuptools.package-data]
tako_ci = ["run.mjs", "manifest.json", "assets/*"]
